--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="landing.css"> <!-- Add a custom CSS file for additional styling -->
+    <!-- <link rel="stylesheet" href="index.css"> Add a custom CSS file for additional styling -->
 </head>
 <body>
 
